objects/Skill__c.object
<CustomObject>
    <label>Skill</label>
    <nameField>
        <displayFormat>Skill_ID-{0000}</displayFormat>
        <label>Skill Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Skills</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>Type__c</fullName>
        <description>Type of skill(e.g., Java)</description>
        <inlineHelpText>Type of skill(e.g., Java)</inlineHelpText>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <description>Additional detail to back up the rating</description>
        <inlineHelpText>Additional detail to back up the rating</inlineHelpText>
        <label>Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rating__c</fullName>
        <description>On a scale of 0(none) to 5 (expert), proficiency of associated resource in this skill</description>
        <inlineHelpText>On a scale of 0(none) to 5 (expert), proficiency of associated resource in this skill</inlineHelpText>
        <label>Rating</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <description>Marketing, Development, HR, Designing</description>
        <inlineHelpText>Marketing, Development, HR, Designing</inlineHelpText>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Development</fullName>
                </value>
                <value>
                    <fullName>HR</fullName>
                </value>
                <value>
                    <fullName>Designing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Resource__c</fullName>
        <label>Resource</label>
        <referenceTo>Resource__c</referenceTo>
        <relationshipLabel>Skills</relationshipLabel>
        <relationshipName>Skills</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Type_of_skills__c</fullName>
        <label>Type of skills</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Category__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Communication</fullName>
                </value>
                <value>
                    <fullName>CSS</fullName>
                </value>
                <value>
                    <fullName>HR</fullName>
                </value>
                <value>
                    <fullName>HTML</fullName>
                </value>
                <value>
                    <fullName>Java</fullName>
                </value>
                <value>
                    <fullName>javascript</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>nodejs</fullName>
                </value>
                <value>
                    <fullName>Photoshop</fullName>
                </value>
                <value>
                    <fullName>php</fullName>
                </value>
                <value>
                    <fullName>python</fullName>
                </value>
                <value>
                    <fullName>SEO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <validationRules>
        <fullName>Skill_Validation_Rule</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(Type_of_skills__c , &apos;&apos;)</errorConditionFormula>
        <errorDisplayField>Type_of_skills__c</errorDisplayField>
        <errorMessage>select the skill</errorMessage>
    </validationRules>
</CustomObject>